--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>Tai has not been found yet! 😭 </h1>
-    <p>Leads? Call 916 284 9816 or email keen.sand7107@fastmail.com </p>
+    <h1>Tai has been found! 🥳🥳🥳🥳 </h1>
+    <p>Baby Tai has return to her new home.</p>
   </body>
 </html>
