--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
   <body>
     <h1>Tai has been found! 🥳🥳🥳🥳 </h1>
-    <p>Baby Tai has return to her new home.</p>
+    <p>Baby Tai has returned to her new home. She just showed up, like "where's dinner?"
+      FYI from what we heard from friends, it seems like cats that go roaming tend to
+      return just about at sundown.</p>
+    <p>While it was scary that Tai made an escape from the indoor cat life,
+      it's super cool that she found her way back and choose to come back
+      to her new family 🥲</p>
+    <p>Thanks to you for caring enough about a cat to check up on her.
+      Have a blessed day 🙌👍😎 </p>
   </body>
 </html>
